--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     //SplashScreenApi
     implementation("androidx.core:core-splashscreen:$splashscreen")
+
+    //SwipeRefreshLayout
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout")
 }
