--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
         datastore_preferences = "1.0.0"
         splashscreen="1.0.1"
         swiperefreshlayout="1.2.0-alpha01"
+        preferences="1.2.0"
+        work="2.8.1"
     }
 
 
