--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         work="2.8.1"
         hilt_work="1.0.0"
         room_runtime = "2.5.1"
+        startup_runtime = "1.1.1"
     }
 
 
